--- a/index.html
+++ b/index.html
@@ -29,5 +29,23 @@
             <a id="cv-button" href="https://web.facebook.com/shantijul.islam.5?ref=bookmarks">Download CV</a>
         </div>
     </section>
+
+    <section class="latest">
+        <h1>My Latest work</h1>
+        <div id="first" class="img-set"><img src="images/latest-work/work-1.png" alt=""></div>
+        <div id="second" class="img-set"><img src="images/latest-work/work-2.jpg" alt=""></div>
+        <div id="third" class="img-set"><img src="images/latest-work/work-3.jpg" alt=""></div>
+    </section>
+
+    <section>
+        <h1>What Client are say</h1>
+        <div>
+            <p></p>
+            <p></p>
+           <h3>Bruce Moccy</h3>
+           <br>
+           Founder & CEO, Alies
+        </div>
+    </section>
 </body>
 </html>
