--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="enlarge" class="biography-area">
         <div id="img-decorate" class="half-width"><img src="images/peter_dream.png" alt=""></div>
         <div id="text-align" class="half-width">
-            <h1>Biography</h1>
+            <h1 id="bio-color">Biography</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
             <br>
             <a id="cv-button" href="https://web.facebook.com/shantijul.islam.5?ref=bookmarks">Download CV</a>
@@ -31,21 +31,40 @@
     </section>
 
     <section class="latest">
-        <h1>My Latest work</h1>
+        <h1 id="latest-work">My Latest work</h1>
         <div id="first" class="img-set"><img src="images/latest-work/work-1.png" alt=""></div>
         <div id="second" class="img-set"><img src="images/latest-work/work-2.jpg" alt=""></div>
         <div id="third" class="img-set"><img src="images/latest-work/work-3.jpg" alt=""></div>
     </section>
 
-    <section>
+    <section class="footer-bg">
         <h1>What Client are say</h1>
-        <div>
+        <div class="last-part">
             <p></p>
             <p></p>
-           <h3>Bruce Moccy</h3>
+            <br>
+           <h3>Bruce Moccy</h3> 
+          <p> Founder & CEO, Alies</p>
            <br>
-           Founder & CEO, Alies
+           
+           <p></p>
+           <p> "Lorem Ipsum is simply dummy text of the 
+      <br>
+               printing and typesetting industry, Lorem Ipsum" </p>
+               <br>
+
+               <p></p>
+               <p></p>
+              <div class="box">
+                <p>Leave me a messege</p>
+                <p></p>
+                <p>shantijulislam6776@gmail.com</p>
+              </div>
+          
+
         </div>
     </section>
+    <br>
+    <footer> shantijul islam initiative.©2020 All rights Reserved</footer>
 </body>
 </html>
